// Copyright 2017 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";
package common;
option go_package = "chromium.googlesource.com/enterprise/cel/go/common";

import "schema/common/options.proto";

// A file reference. Use this when the configuration should refer to a file or
// a directory that's specified as part of the configuraion. All such paths are
// resolved *relative to the source file* in which the reference appears.
message FileReference {
  // Path relative to the location of the .textpb file in which the reference
  // appears. Absolute paths are not allowed.
  //
  //   * Path separators are always forward slashes.
  //   * No parent directory traversal. I.e. ".." is an invalid path component.
  //   * '.' is a valid component, but you might as well leave it out.
  //   * The referenced path must exist.
  //
  // This, of course, means that textpb files that refer to other files should
  // live higher up in the directory tree or live beside the relevant files.
  string path = 1;

  // After the reference is resolved, this field will contain an opaque
  // reference to an accessible location where the contents of the file or
  // folder could be found. For GCE, this would be a cloud storage location.
  string resolved_object = 2 [(v).type = OUTPUT];

  // Contains an absolute local path in the resolver host.
  string resolved_local_path = 3 [(v).type = OUTPUT];
}
